--- a/indexv1.css
+++ b/indexv1.css
@@ -18,8 +18,7 @@ main{
     display: flex;
     flex-direction: column;
     flex: 0 0 0 150px;
-    overflow: scroll;
-    overflow-x: hidden;
+    
     align-items: center;
 }
 main>h1{
@@ -33,7 +32,18 @@ main>h1{
     height: 10%;
     margin: 0;
 }
+
+#search-form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1;
+    width: 100%;
+}
+
 #bookshelves-con{
+    overflow: scroll;
+    overflow-x: hidden;
     background: wheat;
     display: flex;
     flex-direction: column;
@@ -128,10 +138,7 @@ div#preview{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid red;
 }
-
-
 
 #preview>#title{
     font-size:  4em;
@@ -147,7 +154,7 @@ div#preview{
  
 }
 
-form{
+body>form{
     position: absolute;
     background: burlywood;
     top: 40%;
